--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "765chan",
   "version": "0.1.0",
+  "homepage": "https://Ooey.github.io/ooey.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
